@@ -247,6 +247,8 @@ libpthread {
   GLIBC_2.12 {
     pthread_mutex_consistent; pthread_mutexattr_getrobust;
     pthread_mutexattr_setrobust;
+
+    pthread_setname_np; pthread_getname_np;
   };
 
   GLIBC_PRIVATE {
