@@ -1,4 +1,4 @@
-GNU C Library NEWS -- history of user-visible changes.  2010-4-8
+GNU C Library NEWS -- history of user-visible changes.  2010-4-9
 Copyright (C) 1992-2009, 2010 Free Software Foundation, Inc.
 See the end for copying conditions.
 
@@ -15,8 +15,11 @@ Version 2.12
   11120, 11125, 11126, 11127, 11134, 11141, 11149, 11183, 11184, 11185,
   11186, 11187, 11188, 11189, 11190, 11191, 11192, 11193, 11194, 11200,
   11230, 11235, 11242, 11254, 11258, 11271, 11272, 11276, 11279, 11287,
-  11292, 11319, 11332, 11333, 11387, 11389, 11394, 11397, 11410, 11438,
-  11449, 11470, 11471
+  11292, 11319, 11332, 11333, 11387, 11389, 11390, 11394, 11397, 11410,
+  11438, 11449, 11470, 11471
+
+
+* New interfaces: pthread_getname_np, pthread_setname_np
 
 * New Linux interface: recvmmsg
 
